create github pages

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
   <title>Home</title>
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons2/mobirise2.css">
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons/mobirise-icons.css">
+  <link rel="stylesheet" href="assets/web/assets/mobirise-icons-bold/mobirise-icons-bold.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-reboot.min.css">
@@ -308,18 +309,18 @@
                     dolore eu fugiat nulla pariatur. Excepteur sint occaecat.</p>
                 <div class="social-row display-7">
                     <div class="soc-item">
-                        <a href="https://twitter.com/mobirise" target="_blank">
-                            <span class="mbr-iconfont socicon socicon-facebook"></span>
+                        <a href="https://github.com/iotvlogs" target="_blank">
+                            <span class="mbr-iconfont mbrib-github" style="color: rgb(0, 0, 0); fill: rgb(0, 0, 0); font-size: 45px;"></span>
                         </a>
                     </div>
                     <div class="soc-item">
-                        <a href="https://twitter.com/mobirise" target="_blank">
-                            <span class="mbr-iconfont socicon socicon-twitter"></span>
+                        <a href="https://twitter.com/" target="_blank">
+                            <span class="mbr-iconfont socicon-twitter socicon" style="font-size: 45px;"></span>
                         </a>
                     </div>
                     <div class="soc-item">
-                        <a href="https://twitter.com/mobirise" target="_blank">
-                            <span class="mbr-iconfont socicon socicon-instagram"></span>
+                        <a href="https://www.instagram.com/iotvlogs/" target="_blank">
+                            <span class="mbr-iconfont socicon-instagram socicon" style="font-size: 45px;"></span>
                         </a>
                     </div>
                     
