--- a/test_page.html
+++ b/test_page.html
@@ -19,6 +19,7 @@
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-reboot.min.css">
+  <link rel="stylesheet" href="assets/web/assets/gdpr-plugin/gdpr-styles.css">
   <link rel="stylesheet" href="assets/dropdown/css/style.css">
   <link rel="stylesheet" href="assets/socicon/css/styles.css">
   <link rel="stylesheet" href="assets/theme/css/style.css">
@@ -64,7 +65,7 @@
                     <li class="nav-item"><a class="nav-link link text-black display-7" href="https://mobiri.se">Contact</a>
                     </li><li class="nav-item"><a class="nav-link link text-black text-primary display-7" href="test_page.html">Test Page</a></li></ul>
                 
-                <div class="mbr-section-btn"><a class="btn btn-danger display-7" href="https://www.youtube.com/channel/UCSGYW3e0kv2Js5s-36dJC_A" target="_blank">YouTube Channel</a></div>
+                <div class="mbr-section-btn"><a class="btn btn-danger display-7" href="https://mobiri.se">Test</a></div>
                 <div class="tel-menu">
                     <p class="mbr-text mbr-fonts-style display-7">
                         Call us <a href="#" class="text-primary">(</a></p>
@@ -88,7 +89,7 @@
                 <h1 class="mbr-section-title mbr-fonts-style align-center display-2">Title<br>
                 </h1>
                 <h2 class="mbr-section-subtitle mbr-fonts-style align-center display-7">IoT Vlogs is working on creating intuitive tutorials on embedded systems and IoT infrastructure. Stay tuned and follow us on social media to get the latest information on our current and upcoming projects.</h2>
-                <div class="mbr-section-btn"><a class="btn btn-primary display-7" href="https://iotvlogs.github.io/" target="_blank">GitHub Page</a></div>
+                <div class="mbr-section-btn"><a class="btn btn-primary display-7" href="https://iotvlogs.github.io/" target="_blank">Get Code from GitHub</a></div>
             </div>
         </div>
     </div>
@@ -177,6 +178,8 @@
 
 
 <script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="assets/web/assets/cookies-alert-plugin/cookies-alert-core.js"></script>
+  <script src="assets/web/assets/cookies-alert-plugin/cookies-alert-script.js"></script>
   <script src="assets/smoothscroll/smooth-scroll.js"></script>
   <script src="assets/ytplayer/index.js"></script>
   <script src="assets/dropdown/js/navbar-dropdown.js"></script>
@@ -184,5 +187,6 @@
   
   
   
-</body>
+<input name="cookieData" type="hidden" data-cookie-customDialogSelector='null' data-cookie-colorText='#424a4d' data-cookie-colorBg='rgba(234, 239, 241, 0.99)' data-cookie-textButton='Agree' data-cookie-colorButton='' data-cookie-colorLink='#424a4d' data-cookie-underlineLink='true' data-cookie-text="We use cookies to give you the best experience. Read our <a href='privacy.html'>cookie policy</a>.">
+  </body>
 </html>
