create github pages

--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
                     </p>
                     <h1 class="mbr-section-title mbr-fonts-style align-left display-2">Looking for&nbsp;<span class="colored-text">Images</span>&nbsp;to use in your project?</h1>
                     <p class="mbr-text mbr-fonts-style align-left display-4">Images provided by IoT Vlogs are available to download in the Wikimedia Commons repository.</p>
-                    <div class="mbr-section-btn"><a class="btn btn-primary display-7" href="https://iotvlogs.github.io/">Get Free Images</a></div>
+                    <div class="mbr-section-btn"><a class="btn btn-primary display-7" href="https://iotvlogs.github.io/"><span class="mobi-mbri mobi-mbri-camera mbr-iconfont mbr-iconfont-btn"></span>Get Free Images</a></div>
                 </div>
             </div>
             <div class="mbr-section-head col-12 col-lg">
@@ -292,17 +292,17 @@
                 <div class="social-row display-7">
                     <div class="soc-item">
                         <a href="https://github.com/iotvlogs" target="_blank">
-                            <span class="mbr-iconfont mbrib-github" style="color: rgb(107, 37, 255); fill: rgb(107, 37, 255); font-size: 45px;"></span>
+                            <span class="mbr-iconfont socicon-youtube socicon" style="color: rgb(107, 37, 255); fill: rgb(107, 37, 255); font-size: 45px;"></span>
                         </a>
                     </div>
                     <div class="soc-item">
                         <a href="https://www.instagram.com/iotvlogs/" target="_blank">
-                            <span class="mbr-iconfont socicon-instagram socicon" style="font-size: 45px; color: rgb(107, 37, 255); fill: rgb(107, 37, 255);"></span>
+                            <span class="mbr-iconfont mbrib-github" style="font-size: 45px; color: rgb(107, 37, 255); fill: rgb(107, 37, 255);"></span>
                         </a>
                     </div>
                     <div class="soc-item">
                         <a href="https://www.facebook.com/iotvlogs/" target="_blank">
-                            <span class="mbr-iconfont socicon-facebook socicon" style="font-size: 45px; color: rgb(107, 37, 255); fill: rgb(107, 37, 255);"></span>
+                            <span class="mbr-iconfont socicon-instagram socicon" style="font-size: 45px; color: rgb(107, 37, 255); fill: rgb(107, 37, 255);"></span>
                         </a>
                     </div>
                     
@@ -313,23 +313,20 @@
                     <strong>Links</strong>
                 </h5>
                 <ul class="list mbr-fonts-style display-7">
-                    <li class="mbr-text item-wrap"><a href="#" class="text-black">Home</a></li>
-                    <li class="mbr-text item-wrap"><a href="#" class="text-black">Pricing</a></li>
-                    <li class="mbr-text item-wrap"><a href="#" class="text-black">About us</a></li>
+                    <li class="mbr-text item-wrap"><a href="index.html#top" class="text-black text-primary">Top of the Page<br></a></li>
+                    <li class="mbr-text item-wrap"><a href="#" class="text-black"></a><a href="index.html" class="text-black">Homepage</a><br></li>
+                    <li class="mbr-text item-wrap"><a href="page2.html" class="text-black text-primary">About Us</a></li>
                     <li class="mbr-text item-wrap"><a href="#" class="text-black">Service</a></li>
-                    <li class="mbr-text item-wrap"><a href="#" class="text-black">Blog</a></li>
+                    <li class="mbr-text item-wrap"><a href="#" class="text-black">Blog</a></li><li class="mbr-text item-wrap"><br></li>
                 </ul>
             </div>
             <div class="col-12 col-lg-3 col-sm-4 col-link2 col-link">
                 <h5 class="mbr-section-subtitle mbr-fonts-style display-4">
-                    <strong>Services</strong>
-                </h5>
+                    <strong>Portals</strong></h5>
                 <ul class="list mbr-fonts-style display-7">
-                    <li class="mbr-text item-wrap"><a href="#" class="text-black">Artificial Intelligence</a></li>
-                    <li class="mbr-text item-wrap"><a href="#" class="text-black">Data Analytics</a></li>
-                    <li class="mbr-text item-wrap"><a href="#" class="text-black">Data Visualization</a></li>
-                    <li class="mbr-text item-wrap"><a href="#" class="text-black">Deep Learning</a></li>
-                    <li class="mbr-text item-wrap"><a href="#" class="text-black">Statistical Modeling</a></li>
+                    <li class="mbr-text item-wrap"><a href="#" class="text-black"></a><a href="index.html" class="text-black text-primary" style="font-size: 1.125rem; display: inline !important;" target="_blank">YouTube Channel</a></li>
+                    <li class="mbr-text item-wrap"><a href="#" class="text-black"></a><a href="index.html" class="text-black" target="_blank" style="font-size: 1.125rem; display: inline !important;">GitHub Page</a></li>
+                    <li class="mbr-text item-wrap"><a href="#" class="text-black"></a><a href="index.html" class="text-black" target="_blank" style="font-size: 1.125rem; display: inline !important;">Instagram Page</a></li><li class="mbr-text item-wrap"><a href="#" class="text-black"></a><a href="index.html" class="text-primary" target="_blank" style="font-size: 1.125rem; display: inline !important;"></a><a href="index.html" class="text-black text-primary" target="_blank" style="font-size: 1.125rem; display: inline !important;">Wikimedia Commons Repository</a></li>
                 </ul>
             </div>
             <div class="col-12 col-xl-2 col-lg-3 col-sm-4 col-link3 col-link">
