--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
   <link rel="stylesheet" href="assets/dropdown/css/style.css">
   <link rel="stylesheet" href="assets/socicon/css/styles.css">
   <link rel="stylesheet" href="assets/theme/css/style.css">
+  <link rel="preload" href="https://fonts.googleapis.com/css?family=Electrolize:400&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
+  <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Electrolize:400&display=swap"></noscript>
   <link rel="preload" href="https://fonts.googleapis.com/css?family=Be+Vietnam+Pro:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
   <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Be+Vietnam+Pro:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i&display=swap"></noscript>
   <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
@@ -140,13 +142,13 @@
                         <div class="col-12 col-sm-6 col-md-4">
                             <div class="card card-2">
                                 <h2 class="card-title mbr-fonts-style align-center display-2"><strong>test</strong></h2>
-                                <p class="card-text mbr-fonts-style align-center display-7">Lines of Code</p>
+                                <p class="card-text mbr-fonts-style align-center display-7">Lines of Code.</p>
                             </div>
                         </div>
                         <div class="col-12 col-sm-6 col-md-4">
                             <div class="card card-3">
                                 <h2 class="card-title mbr-fonts-style align-center display-2"><strong>test</strong></h2>
-                                <p class="card-text mbr-fonts-style align-center display-7">Images on Wikimedia Commons</p>
+                                <p class="card-text mbr-fonts-style align-center display-7">Images on Wikimedia Commons.</p>
                             </div>
                         </div>
                     </div>
@@ -168,7 +170,7 @@
                     <p class="label-text mbr-fonts-style align-left display-7">
                         <span>QUESTIONS &amp; ANSWERS</span>
                     </p>
-                    <h1 class="mbr-section-title mbr-fonts-style align-left display-2">Looking for&nbsp;<span class="colored-text">Images</span>&nbsp;to use in your project?</h1>
+                    <h1 class="mbr-section-title mbr-fonts-style align-left display-2">Looking for free&nbsp;<span class="colored-text">Images</span>&nbsp;to use in your project?</h1>
                     <p class="mbr-text mbr-fonts-style align-left display-4">Images provided by IoT Vlogs are available to download in the Wikimedia Commons repository.</p>
                     <div class="mbr-section-btn"><a class="btn btn-primary display-7" href="https://iotvlogs.github.io/"><span class="mobi-mbri mobi-mbri-camera mbr-iconfont mbr-iconfont-btn"></span>Get Free Images</a></div>
                 </div>
@@ -178,7 +180,7 @@
                     <div class="card">
                         <div class="card-header" role="tab" id="headingOne">
                             <a role="button" class="panel-title collapsed text-black" data-toggle="collapse" data-bs-toggle="collapse" data-core="" href="#collapse1_5" aria-expanded="false" aria-controls="collapse1">
-                                <h6 class="panel-title-edit mbr-fonts-style mb-0 display-7"><strong>Where do I find codes, schematics, video notes?</strong>
+                                <h6 class="panel-title-edit mbr-fonts-style mb-0 display-7"><strong>Where do I find codes, schematics, video notes?</strong><br><strong><br></strong>
                                 </h6>
                                 <span class="sign mbr-iconfont mbri-arrow-down"></span>
                             </a>
@@ -292,17 +294,17 @@
                 <div class="social-row display-7">
                     <div class="soc-item">
                         <a href="https://github.com/iotvlogs" target="_blank">
-                            <span class="mbr-iconfont socicon-youtube socicon" style="color: rgb(107, 37, 255); fill: rgb(107, 37, 255); font-size: 45px;"></span>
+                            <span class="mbr-iconfont socicon-youtube socicon" style="color: rgb(236, 32, 22); fill: rgb(236, 32, 22); font-size: 45px;"></span>
                         </a>
                     </div>
                     <div class="soc-item">
                         <a href="https://www.instagram.com/iotvlogs/" target="_blank">
-                            <span class="mbr-iconfont mbrib-github" style="font-size: 45px; color: rgb(107, 37, 255); fill: rgb(107, 37, 255);"></span>
+                            <span class="mbr-iconfont mbrib-github" style="font-size: 45px; color: rgb(0, 40, 78); fill: rgb(0, 40, 78);"></span>
                         </a>
                     </div>
                     <div class="soc-item">
                         <a href="https://www.facebook.com/iotvlogs/" target="_blank">
-                            <span class="mbr-iconfont socicon-instagram socicon" style="font-size: 45px; color: rgb(107, 37, 255); fill: rgb(107, 37, 255);"></span>
+                            <span class="mbr-iconfont socicon-instagram socicon" style="font-size: 45px; color: rgb(255, 131, 134); fill: rgb(255, 131, 134);"></span>
                         </a>
                     </div>
                     
@@ -315,7 +317,7 @@
                 <ul class="list mbr-fonts-style display-7">
                     <li class="mbr-text item-wrap"><a href="index.html#top" class="text-black text-primary">Top of the Page<br></a></li>
                     <li class="mbr-text item-wrap"><a href="#" class="text-black"></a><a href="index.html" class="text-black">Homepage</a><br></li>
-                    <li class="mbr-text item-wrap"><a href="page2.html" class="text-black text-primary">About Us</a></li>
+                    <li class="mbr-text item-wrap"><a href="about_us.html" class="text-black text-primary">About Us</a></li>
                     <li class="mbr-text item-wrap"><a href="#" class="text-black">Service</a></li>
                     <li class="mbr-text item-wrap"><a href="#" class="text-black">Blog</a></li><li class="mbr-text item-wrap"><br></li>
                 </ul>
@@ -361,5 +363,6 @@
   
   
 <input name="cookieData" type="hidden" data-cookie-customDialogSelector='null' data-cookie-colorText='#424a4d' data-cookie-colorBg='rgba(234, 239, 241, 0.99)' data-cookie-textButton='Agree' data-cookie-colorButton='' data-cookie-colorLink='#424a4d' data-cookie-underlineLink='true' data-cookie-text="We use cookies to give you the best experience. Read our <a href='privacy.html'>cookie policy</a>.">
+   <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
   </body>
 </html>
