create github pages

--- a/index.html
+++ b/index.html
@@ -100,12 +100,11 @@
         <div class="row justify-content-center">
             <div class="col-12 col-lg">
                 <h5 class="mbr-section-title mbr-fonts-style mb-0 display-2">
-                    <span class="colored-text"> Services</span>&nbsp;IoT Vlogs website is under construction.
-<div><br></div></h5>
+                    <span class="colored-text"> Services</span>&nbsp;IoT Vlogs website is under construction. AAA<div><br></div></h5>
                 
             </div>
             <div class="col-md-12 col-lg-6 col-text">
-                <p class="mbr-text mbr-fonts-style mb-0 display-4"></p><p>The IoT Vlogs website is under construction. The expected date to launch YouTube channel is March 2022.&nbsp; &nbsp; test test test<br></p><p></p>
+                <p class="mbr-text mbr-fonts-style mb-0 display-4">Test test test</p>
             </div>
         </div>
     </div>
