create github pages

--- a/about_us.html
+++ b/about_us.html
@@ -19,10 +19,7 @@
   <link rel="stylesheet" href="assets/dropdown/css/style.css">
   <link rel="stylesheet" href="assets/socicon/css/styles.css">
   <link rel="stylesheet" href="assets/theme/css/style.css">
-  <link rel="preload" href="https://fonts.googleapis.com/css?family=Electrolize:400&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
-  <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Electrolize:400&display=swap"></noscript>
-  <link rel="preload" href="https://fonts.googleapis.com/css?family=Be+Vietnam+Pro:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
-  <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Be+Vietnam+Pro:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i&display=swap"></noscript>
+  <link href="assets/fonts/style.css" rel="stylesheet">
   <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
 
   
@@ -110,7 +107,7 @@
                     </span>
                     <span class="navbar-caption-wrap"><a class="navbar-caption text-black text-primary display-5" href="index.html"><strong>IoT VLOGS</strong><br></a></span>
                 </div>
-                <p class="brand-text mbr-fonts-style display-7">
+                <p class="brand-text mbr-fonts-style display-5">
                     IoT Vlogs is working on creating intuitive tutorials on embedded systems and IoT infrastructure. Stay tuned and follow us on social media to get the latest information on our current and upcoming projects.</p>
                 <div class="social-row display-7">
                     <div class="soc-item">
