create github pages

--- a/test_page.html
+++ b/test_page.html
@@ -41,7 +41,7 @@
                         <img src="assets/images/logo.png" alt="Mobirise" style="height: 4.7rem;">
                     </a>
                 </span>
-                <span class="navbar-caption-wrap"><a class="navbar-caption text-black text-primary display-5" href="index.html">IoT VLOGS</a></span>
+                <span class="navbar-caption-wrap"><a class="navbar-caption text-black text-primary display-5" href="index.html">IoT Vlogs</a></span>
             </div>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-bs-toggle="collapse" data-target="#navbarSupportedContent" data-bs-target="#navbarSupportedContent" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <div class="hamburger">
@@ -105,7 +105,7 @@
                             <img src="assets/images/logo.png" alt="Mobirise" style="height: 5.1rem;">
                         </a>
                     </span>
-                    <span class="navbar-caption-wrap"><a class="navbar-caption text-black text-primary display-5" href="index.html"><strong>IoT VLOGS</strong><br></a></span>
+                    <span class="navbar-caption-wrap"><a class="navbar-caption text-black text-primary display-5" href="index.html"><strong>IoT Vlogs</strong><br></a></span>
                 </div>
                 <p class="brand-text mbr-fonts-style display-7">
                     IoT Vlogs is working on creating intuitive tutorials on embedded systems and IoT infrastructure. Stay tuned and follow us on social media to get the latest information on our current and upcoming projects.</p>
